--- a/main.css
+++ b/main.css
@@ -114,88 +114,21 @@ section h2{
 
 /* Lista de produtos ↑ */
 
-@media only screen and (max-width: 768px) {
-    header h1 {
-        font-size: 20px;
-    }
-
-    header nav li {
-        font-size: 18px;
-        margin-left: 8px;
-    }
-
-    /* Adicionar padding para compensar a largura da barra de rolagem */
-    .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-right: 15px;
-        padding-left: 15px;
-    }
-
-    .container img {
-        max-width: 100%;
-        height: auto;
-        margin: 24px;
-    }
-
-    .text-container {
-        width: 100%;
-    }
+@media only screen and (max-width: 640px) {
+    /* ... Estilos existentes para dispositivos móveis */
 
     .lista-motos li {
-        width: calc(50% - 10px);
-        padding: 8px;
-    }
-
-    /* Remover a barra de rolagem horizontal */
-    body {
-        overflow-x: hidden;
-    }
-}
-
-@media only screen and (min-width: 641px) and (max-width: 1023px) {
-    header {
-        padding: 12px 0;
-        font-size: 18px;
-    }
-
-    header nav li {
-        margin-left: 12px;
-        font-size: 20px;
-    }
-
-    .container img {
         width: 100%;
-        height: auto;
-    }
-
-    section {
-        padding: 12px 0;
-    }
-
-    section img {
-        margin-right: 16px;
-    }
-
-    section h2 {
-        font-size: 16px;
-        margin: 20px 0;
-        padding-bottom: 8px;
-    }
-
-    .lista-motos li {
-        width: calc(33.3333% - 20px);
-        padding: 8px;
+        padding: 10px;
     }
 
     .lista-motos img {
-        max-height: 160px;
+        max-height: 180px;
     }
 
     .lista-motos h3 {
         font-size: 16px;
-        margin: 8px 0;
+        margin: 10px 0;
     }
 
     .lista-motos p {
@@ -204,11 +137,43 @@ section h2{
 
     .lista-motos strong {
         font-size: 14px;
-        margin-top: 8px;
+        margin-top: 10px;
     }
 
     .lista-motos button {
-        padding: 4px 8px;
+        padding: 5px 10px;
         font-size: 12px;
+    }
+}
+
+@media only screen and (min-width: 641px) and (max-width: 1023px) {
+    /* ... Estilos existentes para tablets */
+
+    .lista-motos li {
+        width: calc(50% - 20px);
+        padding: 10px;
+    }
+
+    .lista-motos img {
+        max-height: 200px;
+    }
+
+    .lista-motos h3 {
+        font-size: 18px;
+        margin: 10px 0;
+    }
+
+    .lista-motos p {
+        font-size: 14px;
+    }
+
+    .lista-motos strong {
+        font-size: 16px;
+        margin-top: 10px;
+    }
+
+    .lista-motos button {
+        padding: 5px 10px;
+        font-size: 14px;
     }
 }
