--- a/main.css
+++ b/main.css
@@ -144,6 +144,10 @@ section h2{
         padding: 5px 10px;
         font-size: 12px;
     }
+
+    html {
+        overflow-x: hidden;
+    }
 }
 
 @media only screen and (min-width: 641px) and (max-width: 1023px) {
@@ -175,5 +179,9 @@ section h2{
     .lista-motos button {
         padding: 5px 10px;
         font-size: 14px;
+    }
+
+    html {
+        overflow-x: hidden;
     }
 }
